# proxmox-mcp-rs

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DOCKER_README.md  Dockerfile  README.md  Taskfile.yml  build.rs  compose.yaml  config.toml.example  integration_test.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  docker.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  verification.md  workflow.md
conductor/tracks/cluster_management/: plan.md  spec.md
conductor/tracks/error_reporting/: plan.md  spec.md
conductor/tracks/lxc_bind_mounts/: plan.md  spec.md
conductor/tracks/pci_usb_passthrough/: plan.md  spec.md
conductor/tracks/subscription_management/: plan.md  spec.md
conductor/tracks/vm_config_mod_20260115/: index.md  metadata.json  plan.md  spec.md
examples/: gen_manual.rs
src/: cli.rs  http_server.rs  main.rs  mcp.rs  proxmox.rs  settings.rs  tests.rs
src/proxmox/: access.rs  agent.rs  client.rs  cluster.rs  error.rs  hardware.rs  mod.rs  pool.rs  replication.rs  snapshot.rs  storage.rs  subscription.rs  system.rs  vm.rs
