[package]
name = "proxmox-mcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "cookies"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
url = "2.4"
clap = { version = "4.3", features = ["derive", "env"] }
# specific to handling potential self-signed certs often found in Proxmox
native-tls = "0.2"