[package]
name = "proxmox-mcp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
anyhow = "1.0"
log = "0.4"
url = "2.4"
clap = { version = "4.3", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"

[dev-dependencies]
tempfile = "3.24.0"
wiremock = "0.6.5"
