[package]
name = "proxmox-mcp-rs"
version = "0.3.18"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }
anyhow = "1.0"
log = "0.4"
url = "2.4"
clap = { version = "4.3", features = ["derive", "env"] }
config = { version = "0.15.19", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures = "0.3"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
dashmap = "6.1" # For managing active SSE sessions
clap_complete = "4.5"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.24.0"
wiremock = "0.6.5"
clap_mangen = "0.2"

# Profile for final production releases (smaller, faster)
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Link Time Optimization (smaller binary)
codegen-units = 1       # Reduce parallel code generation for better optimization
panic = "abort"         # Remove stack unwinding (smaller binary)
strip = true            # Strip symbols (smaller binary)

# Profile for CI/CD builds (inherits from dev)
[profile.ci]
inherits = "dev"
incremental = false     # Disable incremental compilation for CI (often slower/buggy in CI cache)
debug = 0               # No debug info needed for basic CI checks (speeds up build)
